--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¡Felicidades!</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>¡Felicidades!</h1>
-    <p></p>
+    <header>
+        <h1 class="title typewriter">¡Felicidades!</h1>
+        <p class="subtitle">Hoy es un día especial para tí. ¡Cumples 23 añitos!</p>
+    </header>
+    <main>
+        <p>Te quiero mucho y por eso quiero regalarte algo especial.</p>
+        <figure id="revel" class="revel-hidden">
+            <span>¡Click me!</span>
+            <img src="images/heart_tatto.webp" alt="heart_tatto">
+        </figure>
+
+        <p>Espero que te guste <span class="span">¡Feliz cumple!</span></p>
+    </main>
+    <footer>&copy; 2024 | feliz cumple</footer>
+    <script src="main.js"></script>
 </body>
 </html>
